[package]
name = "autorun-unikey"
version = "0.1.0"
edition = "2021"

[dependencies]
winreg = "0.52"

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Abort on panic instead of unwinding (saves space)
